Only remove unused directories that are no longer modules in ODG.replaceGenerated().